# NamiSync

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BUGS.md  COMMANDLINE.md  CORE.md  DATABASE.md  DESIGN_REVIEW.md  DESKTOP_UI.md  DISPATCHER.md  EXECUTOR.md  FEATURES.md  HANDOFF.md  HASH_IMPORT.md  HASH_REFACTOR.md  HISTORY.md  INGEST.md  INTERFACES.md  INVENTORY.md  M1_PLAN.md  PLANNER.md  PREFLIGHT.md  RECORDER.md  SCANNER.md  VERIFIER.md  WORKFLOWS.md
docs/PoC_import/: BUGS.md  DATABASE.md  EXECUTOR.md  TESTS.md
docs/obsolete/: HASH_IMPORT.md
namisync/: __init__.py  __main__.py
namisync/core/: __init__.py  events.py  evidence.py  execution.py  integrity.py  models.py  pathing.py  planning.py  preflight.py  recording.py  session.py
namisync/db/: __init__.py  connections.py  history.py  recorder.py  repositories.py  schema.py  settings.py  timestamps.py  writer.py
namisync/dispatcher/: __init__.py  contracts.py  custody.py  dispatcher.py  event_bus.py  store.py
namisync/interfaces/: __init__.py  cli.py  ui_state.py
namisync/interfaces/web/: __init__.py  security_spike.py
namisync/modules/: __init__.py  executor.py  planner.py  preflight.py  scanner.py  verifier.py
namisync/workflows/: __init__.py  inventory.py  models.py  payloads.py  runtime.py  selection.py  sync.py  views.py
tests/: _db_fixtures.py  test_cli.py  test_core_scanplan.py  test_db_history.py  test_db_repositories.py  test_db_schema.py  test_db_write_boundary.py  test_executor.py  test_executor_acl.py  test_executor_pipeline.py  test_inventory_runtime.py  test_inventory_workflow.py  test_package.py  test_payload_roundtrip.py  test_planner.py  test_preflight.py  test_recorder_concurrency.py  test_recorder_inventory_integrity.py  test_recorder_setup_and_move.py  test_recorder_sync.py  test_scanner.py  test_settings.py  test_verifier_recorder_integration.py  test_web_security_spike.py  test_workflow_views.py  test_workflows.py
tests/core/: test_session_events.py
tests/dispatcher/: test_boundaries.py  test_custody.py  test_dispatcher.py  test_event_bus.py
tests/modules/: test_verifier.py
ui_mockup/: mockup.html  mockup.md
