[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "namisync"
version = "0.1.0"
description = "Safety-first one-way file mirroring for Windows"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
dependencies = []

[project.optional-dependencies]
dev = [
    "import-linter>=2.0",
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["namisync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
